postgres-macros/tests/fail/missing_arg.rs
fn main() {
    sqlm_postgres_macros::sql!("foo{} {}", "bar");
}
