postgres-macros/tests/fail/missing_arg.stderr
error: missing argument for position 1
 --> tests/fail/missing_arg.rs:2:32
  |
2 |     sqlm_postgres_macros::sql!("foo{} {}", "bar");
  |                                ^^^^^^^^^^
